# ML_projects

./: README.md  transformer_final.ipynb
Adversarial noise/: adv_noise.py  main.py  pyproject.toml  readme.md  run.sh  utils.py
Classical ML/: data.py  models.py  playground.ipynb  plot_utils.py
Federated_Learning/: flowerllm.py
Federated_Learning/attacks/: attack.py
Federated_Learning/autonomous_vehicles/: client_initialization.py  client_train.py  data.py  run.sh  server.py
Federated_Learning/cpu_tracker_member/: LICENSE  README.md  main.py  requirements.txt  run.sh
Federated_Learning/data/zalando-datasets___fashion_mnist/fashion_mnist/0.0.0/531be5e2ccc9dba0c201ad3ae567a4f3d16ecdd2/: dataset_info.json
